# juceissues

./: CMakeLists.txt  Info.plist  README.md  build_debug.bat  build_debug.sh  build_release.sh  bundleid_Info.plist  generate.bat  generate.sh  generate_ios.sh
.github/workflows/: on_push.yml
BinaryRes/: CMakeLists.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
